--- a/app/src/main/res/layout/layout_user_input.xml
+++ b/app/src/main/res/layout/layout_user_input.xml
@@ -12,6 +12,7 @@
         android:layout_margin="5dp">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/ui_organisation_name_et_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -27,6 +28,7 @@
         android:layout_margin="5dp">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/ui_repository_name_et_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,9 +39,12 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        android:id="@+id/ui_fetch_issues_button_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
         android:text="@string/fetch_issues"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="15sp"
